# Utils

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  coveralls
.devcontainer/: .clangd.in  Dockerfile  cmake-kits.json.in  cmake-variants.yaml.in  devcontainer.json  install_dependencies.sh  setup_dev_container.sh
.github/workflows/: build_dev_img.yml  ci.yml  coveralls
CMake/: BuildUtils.cmake  FindBoost.cmake  Findlibbsd.cmake  Findlog4cplus.cmake  Findotl.cmake  ToolchainUtils.cmake  UtilsConfig.cmake.in  gcc-x86_64-linux-gnu.cmake  llvm-x86_64-linux-gnu.cmake
CMake/BuildUtils/: BuildHelper.cmake  UnitTestHelper.cmake
CMake/Common/: LogHelper.cmake  ParamHelper.cmake
CMake/Toolchain/: ToolchainHelper.cmake  gcc-x86_64-linux-gnu.cmake  llvm-x86_64-linux-gnu.cmake
CMakeModule/: Findlog4cplus.cmake
Doc/: Doxyfile
Tests/: BinaryHelperTest.cpp  BlackMagicsTest.cpp  BufferCacheTest.cpp  CMakeLists.txt  CircularBufferTest.cpp  DiagnosticsTest.cpp  LinearBufferTest.cpp  PathHelperTest.cpp  SerialportChannelTest.cpp  TcpChannelTest.cpp  TestStub.cpp  ThreadPoolTest.cpp  TimerCacheTest.cpp  TlsTest.cpp  UnixSignalHelperTest.cpp  WaitEventTest.cpp
Utils/: CMakeLists.txt
Utils/AppEntry/: ApplicationBase.h  IProgressReporter.cpp  IProgressReporter.h  SystemdProgressReporter.cpp  SystemdProgressReporter.h  UnixApplicationBase.h  WinApplicationBase.h  WinSvcProgressReporter.cpp  WinSvcProgressReporter.h  install.sh  skeleton  skeleton-systemV  skeleton-systemd  uninstall.sh
Utils/AppEntry/Signal/: SignalDispatcher.hpp  UnixSignalHelper.cpp  UnixSignalHelper.h
Utils/Buffer/: BinaryHelper.cpp  BinaryHelper.h  BufferCacheBase.h  BufferDescriptor.h  CircularBuffer.cpp  CircularBuffer.h  CircularBufferCache.cpp  CircularBufferCache.h  FrameRecvHelper.h  LinearBuffer.cpp  LinearBuffer.h  LinearBufferCache.cpp  LinearBufferCache.h
Utils/Channel/Common/: IAsyncChannel.cpp  IAsyncChannel.h  IAsyncChannelHandler.cpp  IAsyncChannelHandler.h  StreamChannelBase.h  StreamChannelBase.hpp  StreamChannelBaseImpl.h
Utils/Channel/SerialPort/: SerialPortChannel.cpp  SerialPortChannel.h  SerialPortSettings.h
Utils/Channel/Tcp/: TcpChannelBase.h  TcpChannelBase.hpp  TcpChannelBaseImpl.h  TcpListenerBase.h  TcpListenerBase.hpp  TcpListenerBaseImpl.h  TcpPassiveChannelBase.h  TcpPassiveChannelBase.hpp  TcpPassiveChannelBaseImpl.h  TcpV4Channel.cpp  TcpV4Channel.h  TcpV4Listener.cpp  TcpV4Listener.h  TcpV4PassiveChannel.cpp  TcpV4PassiveChannel.h
Utils/Channel/Traits/: SerialPortTraits.h  TcpV4Traits.h
Utils/Common/: CommonHdr.h  ObjectPoolBase.h  ObjectPoolBase.hpp  ObjectPoolBaseImpl.h  PathHelper.cpp  PathHelper.h  ResGuard.h  RunTimeLibraryHelper.h  WinSrvHelper.cpp  WinSrvHelper.h
Utils/Concurrent/: BlackMagics.cpp  BlackMagics.h  SpinLock.h  TaskBarrier.h  ThreadPool.cpp  ThreadPool.h  TlsHelper.h  WaitEvent.cpp  WaitEvent.h
Utils/Concurrent/Timer/: DeadlineTimerCache.cpp  DeadlineTimerCache.h  SteadyTimerCache.cpp  SteadyTimerCache.h  TimerCacheBase.h
Utils/Database/SQL/Common/: ISqlDatabase.cpp  ISqlDatabase.h  OTLHdr.h  SqlDatabasePool.cpp  SqlDatabasePool.h  SqlDatabaseType.h
Utils/Database/SQL/OCI/: OCISqlDatabase.cpp  OCISqlDatabase.h
Utils/Database/SQL/ODBC/: ODBCSqlDatabase.cpp  ODBCSqlDatabase.h
Utils/Diagnostics/: DiagnosticsHelper.cpp  DiagnosticsHelper.h
Utils/Log/: Log4cplusCustomInc.h
Utils/MetaPrograme/: TypeAssert.hpp  TypeList.hpp
Utils/MetaPrograme/Common/: MPListAlgorithms.hpp  TypeListElementTrait.hpp  TypedValue.hpp  TypedValueListTrait.hpp
