CMAKE_MINIMUM_REQUIRED(VERSION 3.6.0)

PROJECT(Utils)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_SKIP_BUILD_RPATH TRUE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
SET(CMAKE_INSTALL_RPATH ".")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/CMake)

OPTION(ENABLE_ODBC_DATABASE_UTILS "Enable or disable odbc database utilities(ON/OFF),default is OFF" OFF)
OPTION(ENABLE_OCI_DATABASE_UTILS "Enable or disable oci database utilities(ON/OFF),default is OFF" OFF)
IF(WIN32)
	SET(Boost_NAMESPACE libboost)
ENDIF()
FIND_PACKAGE(Boost REQUIRED COMPONENTS system thread regex filesystem program_options unit_test_framework)
FIND_PACKAGE(log4cplus REQUIRED)
FIND_PACKAGE(otl 4. REQUIRED)
IF(UNIX)
	FIND_PACKAGE(libbsd REQUIRED)
ENDIF()

ADD_SUBDIRECTORY(Utils)

OPTION(BUILD_TESTS "Wether to build test cases(ON/OFF),default is ON." ON)
IF(BUILD_TESTS)
	ADD_SUBDIRECTORY(Tests)
ENDIF()
